fix stretch image slider safari

--- a/src/components/Bits/ImageSlider/ImageSlider.module.scss
+++ b/src/components/Bits/ImageSlider/ImageSlider.module.scss
@@ -13,7 +13,7 @@
 
 .slide {
   img, span{
-    width: 100%!important;
+    width: auto!important;
     height: 65vh!important;
     padding: 0 10px;
   }
